update katsu refs to program
